[metadata]
name = audiostream2py
version = 0.1.6
url = https://github.com/i2mint/audiostream2py
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = stream2py interface for audio
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = audiostream2py

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    stream2py
    pyaudio
